--- a/index.html
+++ b/index.html
@@ -16,120 +16,121 @@
 </head>
 
 <body>
-    <!-- Шапка -->
+<!-- Шапка -->
     <header class="header">
-        <div class="container">
-            <a class="link logo" href="./index.html"><span class="web">Web</span>Studio</a>
-            <nav class="nav">
-                <ul class="list">
-                    <li class="item"><a class="link link-current" href="./index.html">Студия</a></li>
-                    <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
-                    <li class="item"><a class="link" href="">Контакты</a></li>
+        <div class="container header-container">
+            <a class="link logo header-logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+            <nav>
+                <ul class="list nav-list">
+                    <li class="nav-item"><a class="link nav-link link-current" href="./index.html">Студия</a></li>
+                    <li class="nav-item"><a class="link nav-link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="nav-item"><a class="link nav-link" href="">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="list contacts">
-                <li class="item"><a class="link contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="item"><a class="link contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="list contacts-list">
+                <li class="contacts-item"><a class="link header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="contacts-item"><a class="link header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
             </ul>
         </div>
     </header>
-    <!-- Основная часть -->
+<!-- Основная часть -->
     <main>
-        <!-- Герой -->
+    <!-- Герой -->
         <section class="section hero">
-            <div class="container">
-                <h1 class="title">Эффективные решения <br> для вашего бизнеса</h1>
-                <button type="button" class="btn">Заказать услугу</button>
+            <div class="container hero-container">
+                <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+                <button type="button" class="hero-btn">Заказать услугу</button>
 
             </div>
         </section>
-        <!-- Преимущества -->
+    <!-- Преимущества -->
         <section class="section">
             <div class="container">
                 <h2 class="visually-hidden">Преимущества</h2>
                 <ul class="list feature-list">
-                    <li class="item">
-                        <h3 class="title">Внимание к деталям</h3>
-                        <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <li class="feature-item">
+                        <h3 class="feature-title">Внимание к деталям</h3>
+                        <p class="feature-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="item">
-                        <h3 class="title">Пунктуальность</h3>
-                        <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <li class="feature-item">
+                        <h3 class="feature-title">Пунктуальность</h3>
+                        <p class="feature-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li class="item">
-                        <h3 class="title">Планирование</h3>
-                        <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <li class="feature-item">
+                        <h3 class="feature-title">Планирование</h3>
+                        <p class="feature-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="item">
-                        <h3 class="title">Современные технологии</h3>
-                        <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <li class="feature-item">
+                        <h3 class="feature-title">Современные технологии</h3>
+                        <p class="feature-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
             </div>
         </section>
-        <!-- Направления работы -->
+    <!-- Направления работы -->
         <section class="section services">
             <div class="container">
-                <h2 class="title">Чем мы занимаемся</h2>
-                <ul class="list">
-                    <li class="item">
+                <h2 class="services-title">Чем мы занимаемся</h2>
+                <ul class="list services-list">
+                    <li class="services-item">
                         <img class="image" src="./images/index/img1.jpg" alt="компьютер" width="370">
                     </li>
-                    <li class="item">
+                    <li class="services-item">
                         <img class="image" src="./images/index/img2.jpg" alt="телефон" width="370">
                     </li>
-                    <li class="item">
+                    <li class="services-item">
                         <img class="image" src="./images/index/img3.jpg" alt="планшет" width="370">
                     </li>
                 </ul>
             </div>
         </section>
-        <!-- Сотрудники -->
+    <!-- Сотрудники -->
         <section class="section team">
             <div class="container">
-                <h2 class="title">Наша команда</h2>
-                <ul class="list">
-                    <li class="item">
+                <h2 class="team-title">Наша команда</h2>
+                <ul class="list team-list">
+                    <li class="team-item">
                         <img class="image" src="./images/index/img4.jpg" alt="Игорь Демьяненко" width="270">
                         <div class="team-description">
-                            <h3 class="name">Игорь Демьяненко</h3>
-                            <p class="text">Product Designer</p>
+                            <h3 class="team-name">Игорь Демьяненко</h3>
+                            <p class="team-text">Product Designer</p>
                         </div>
                     </li>
-                    <li class="item">
+                    <li class="team-item">
                         <img class="image" src="./images/index/img5.jpg" alt="Ольга Репина" width="270">
                         <div class="team-description">
-                            <h3 class="name">Ольга Репина</h3>
-                            <p class="text">Frontend Developer</p>
+                            <h3 class="team-name">Ольга Репина</h3>
+                            <p class="team-text">Frontend Developer</p>
                         </div>
                     </li>
-                    <li class="item">
+                    <li class="team-item">
                         <img class="image" src="./images/index/img6.jpg" alt="Николай Тарасов" width="270">
                         <div class="team-description">
-                            <h3 class="name">Николай Тарасов</h3>
-                            <p class="text">Marketing</p>
+                            <h3 class="team-name">Николай Тарасов</h3>
+                            <p class="team-text">Marketing</p>
                         </div>
                     </li>
-                    <li class="item">
+                    <li class="team-item">
                         <img class="image" src="./images/index/img7.jpg" alt="Михаил Ермаков" width="270">
                         <div class="team-description">
-                            <h3 class="name">Михаил Ермаков</h3>
-                            <p class="text">UI Designer</p>
+                            <h3 class="team-name">Михаил Ермаков</h3>
+                            <p class="team-text">UI Designer</p>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
     </main>
-    <!-- Подвал -->
+<!-- Подвал -->
     <footer class="footer">
         <div class="container">
-            <a class="link logo" href="./index.html"><span class="web">Web</span>Studio</a>
-            <address class="address">
+            <a class="link logo footer-logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+            <address class="address footer-address">
                 <ul class="list">
-                    <li class="item">г. Киев, пр-т Леси Украинки, 26</li>
-                    <li class="item"><a class="link contact" href="mailto:info@example.com">info@example.com</a></li>
-                    <li class="item"><a class="link contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                    <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
+                    <li class="address-item"><a class="link footer-contact" href="mailto:info@example.com">info@example.com</a></li>
+                    <li class="address-item"><a class="link footer-contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
                 </ul>
             </address>
         </div>
