--- a/portfolio.html
+++ b/portfolio.html
@@ -13,48 +13,49 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <!-- Шапка -->
+<!-- Шапка -->
     <header class="header">
-        <div class="container">
-            <a class="link logo" href="./index.html"><span class="web">Web</span>Studio</a>
-            <nav class="nav">
-                <ul class="list">
-                    <li class="item"><a class="link" href="./index.html">Студия</a></li>
-                    <li class="item"><a class="link link-current" href="./portfolio.html">Портфолио</a></li>
-                    <li class="item"><a class="link" href="">Контакты</a></li>
+        <div class="container header-container">
+            <a class="link logo header-logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+            <nav>
+                <ul class="list nav-list">
+                    <li class="nav-item"><a class="link nav-link" href="./index.html">Студия</a></li>
+                    <li class="nav-item"><a class="link nav-link link-current" href="./portfolio.html">Портфолио</a></li>
+                    <li class="nav-item"><a class="link nav-link" href="">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="list contacts">
-                <li class="item"><a class="link contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="item"><a class="link contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="list contacts-list">
+                <li class="contacts-item"><a class="link header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="contacts-item"><a class="link header-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
-    <!-- Основная часть -->
+<!-- Основная часть -->
     <main>
-        <!-- Примеры работ -->
-        <section class="examples section">
+        <section class="section">
             <div class="container">
                 <h1 class="visually-hidden">Примеры работ</h1>
-                <ul class="list list-buttons">
-                    <li class="item">
-                        <button type="button" class="btn default">Все</button>
+    <!-- Кнопки фильтра -->
+                <ul class="list filter-list">
+                    <li class="filter-item">
+                        <button type="button" class="filter-btn btn-default">Все</button>
                     </li>
-                    <li class="item">
-                        <button type="button" class="btn">Веб-сайты</button>
+                    <li class="filter-item">
+                        <button type="button" class="filter-btn">Веб-сайты</button>
                     </li>
-                    <li class="item">
-                        <button type="button" class="btn">Приложения</button>
+                    <li class="filter-item">
+                        <button type="button" class="filter-btn">Приложения</button>
                     </li>
-                    <li class="item">
-                        <button type="button" class="btn">Дизайн</button>
+                    <li class="filter-item">
+                        <button type="button" class="filter-btn">Дизайн</button>
                     </li>
-                    <li class="item">
-                        <button type="button" class="btn">Маркетинг</button>
+                    <li class="filter-item">
+                        <button type="button" class="filter-btn">Маркетинг</button>
                     </li>
                 </ul>
-                <ul class="list list-projects">
-                    <li class="item">
+    <!-- Примеры работ -->
+                <ul class="list projects-list">
+                    <li class="projects-item">
                         <a class="link" href="">
                             <img class="image" src="./images/portfolio/img1.jpg" alt="Веб-сайт" width="370">
                             <div class="project-description">
@@ -63,7 +64,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="projects-item">
                         <a class="link" href="">
                             <img class="image" src="./images/portfolio/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
                             <div class="project-description">
@@ -72,7 +73,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="projects-item">
                         <a class="link" href="">
                             <img class="image" src="./images/portfolio/img3.jpg" alt="Лого ресторана Seafood" width="370">
                             <div class="project-description">
@@ -81,7 +82,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="projects-item">
                         <a class="link" href="">
                             <img class="image" src="./images/portfolio/img4.jpg" alt="Наушники" width="370">
                             <div class="project-description">
@@ -90,7 +91,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="projects-item">
                         <a class="link" href="">
                             <img class="image" src="./images/portfolio/img5.jpg" alt="Два ящика" width="370">
                             <div class="project-description">
@@ -99,7 +100,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="projects-item">
                         <a class="link" href="">
                             <img class="image" src="./images/portfolio/img6.jpg" alt="Монитор" width="370">
                             <div class="project-description">
@@ -108,7 +109,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="projects-item">
                         <a class="link" href="">
                             <img class="image" src="./images/portfolio/img7.jpg" alt="Журнал" width="370">
                             <div class="project-description">
@@ -117,7 +118,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="projects-item">
                         <a class="link" href="">
                             <img class="image" src="./images/portfolio/img8.jpg" alt="Бирка" width="370">
                             <div class="project-description">
@@ -126,7 +127,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="item">
+                    <li class="projects-item">
                         <a class="link" href="">
                             <img class="image" src="./images/portfolio/img9.jpg" alt="Ноутбук" width="370">
                             <div class="project-description">
@@ -139,15 +140,15 @@
             </div>
         </section>
     </main>
-    <!-- Подвал -->
+<!-- Подвал -->
     <footer class="footer">
         <div class="container">
-            <a class="link logo" href="./index.html"><span class="web">Web</span>Studio</a>
-            <address class="address">
+            <a class="link logo footer-logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+            <address class="address footer-address">
                 <ul class="list">
-                    <li class="item">г. Киев, пр-т Леси Украинки, 26</li>
-                    <li class="item"><a class="link contact" href="mailto:info@example.com">info@example.com</a></li>
-                    <li class="item"><a class="link contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                    <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
+                    <li class="address-item"><a class="link footer-contact" href="mailto:info@example.com">info@example.com</a></li>
+                    <li class="address-item"><a class="link footer-contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
                 </ul>
             </address>
         </div>
