Добавляє декоративні елементи

--- a/index.html
+++ b/index.html
@@ -28,8 +28,21 @@
                 </ul>
             </nav>
             <ul class="list contacts-list">
-                <li class="contacts-item"><a class="link header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="contacts-item"><a class="link header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+                <li class="contacts-item">
+                    <a class="link header-contact" href="mailto:info@devstudio.com">
+                        <svg class="icon  header-contact-icon" width="16" height="12">
+                            <use href="./images/icons.svg#envelope"></use>
+                        </svg>
+                        info@devstudio.com
+                    </a>
+                </li>
+                <li class="contacts-item">
+                    <a class="link header-contact" href="tel:+380961111111">
+                        <svg class="icon header-contact-icon" width="10" height="16">
+                            <use href="./images/icons.svg#smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11
+                    </a>
                 </li>
             </ul>
         </div>
@@ -41,7 +54,6 @@
             <div class="container hero-container">
                 <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
                 <button type="button" class="hero-btn">Заказать услугу</button>
-
             </div>
         </section>
     <!-- Преимущества -->
@@ -50,18 +62,38 @@
                 <h2 class="visually-hidden">Преимущества</h2>
                 <ul class="list feature-list">
                     <li class="feature-item">
+                        <div class="feature-icon-box">
+                            <svg class="icon feature-icon" width="70" height="70">
+                                <use href="./images/icons.svg#antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Внимание к деталям</h3>
                         <p class="feature-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="feature-item">
+                        <div class="feature-icon-box">
+                            <svg class="icon feature-icon" width="70" height="70">
+                                <use href="./images/icons.svg#clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Пунктуальность</h3>
                         <p class="feature-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="feature-item">
+                        <div class="feature-icon-box">
+                            <svg class="icon feature-icon" width="70" height="70">
+                                <use href="./images/icons.svg#diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Планирование</h3>
                         <p class="feature-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="feature-item">
+                        <div class="feature-icon-box">
+                            <svg class="icon feature-icon" width="70" height="70">
+                                <use href="./images/icons.svg#astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="feature-title">Современные технологии</h3>
                         <p class="feature-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -95,6 +127,35 @@
                         <div class="team-description">
                             <h3 class="team-name">Игорь Демьяненко</h3>
                             <p class="team-text">Product Designer</p>
+                            <ul class="list team-social-links">
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -102,6 +163,36 @@
                         <div class="team-description">
                             <h3 class="team-name">Ольга Репина</h3>
                             <p class="team-text">Frontend Developer</p>
+                            <ul class="list team-social-links">
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -109,6 +200,36 @@
                         <div class="team-description">
                             <h3 class="team-name">Николай Тарасов</h3>
                             <p class="team-text">Marketing</p>
+                            <ul class="list team-social-links">
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -116,7 +237,87 @@
                         <div class="team-description">
                             <h3 class="team-name">Михаил Ермаков</h3>
                             <p class="team-text">UI Designer</p>
+                            <ul class="list team-social-links">
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="link team-social-link" href="">
+                                        <svg class="icon" width="20" height="20">
+                                            <use href="./images/icons.svg#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    <!-- Клиенты -->
+        <section class="section">
+            <div class="container">
+                <h2 class="customers-title">Постоянные клиенты</h2>
+                <ul class="list customers-list">
+                    <li class="customers-item">
+                        <a class="link customers-link" href="">
+                            <svg class="icon" width="106" height="60">
+                                <use href="./images/icons.svg#logo1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a class="link customers-link" href="">
+                            <svg class="icon" width="106" height="60">
+                                <use href="./images/icons.svg#logo2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a class="link customers-link" href="">
+                            <svg class="icon" width="106" height="60">
+                                <use href="./images/icons.svg#logo3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a class="link customers-link" href="">
+                            <svg class="icon" width="106" height="60">
+                                <use href="./images/icons.svg#logo4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a class="link customers-link" href="">
+                            <svg class="icon" width="106" height="60">
+                                <use href="./images/icons.svg#logo5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a class="link customers-link" href="">
+                            <svg class="icon" width="106" height="60">
+                                <use href="./images/icons.svg#logo6"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -124,15 +325,50 @@
     </main>
 <!-- Подвал -->
     <footer class="footer">
-        <div class="container">
-            <a class="link logo footer-logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-            <address class="address footer-address">
-                <ul class="list">
-                    <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
-                    <li class="address-item"><a class="link footer-contact" href="mailto:info@example.com">info@example.com</a></li>
-                    <li class="address-item"><a class="link footer-contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <div class="container footer-container">
+            <div>
+                <a class="link logo footer-logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+                <address class="address footer-address">
+                    <ul class="list">
+                        <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
+                        <li class="address-item"><a class="link footer-contact" href="mailto:info@example.com">info@example.com</a></li>
+                        <li class="address-item"><a class="link footer-contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-social-box">
+                <h2 class="social-title">присоединяйтесь</h2>
+                <ul class="list footer-social-links">
+                    <li class="footer-social-item">
+                        <a class="link footer-social-link" href="">
+                            <svg class="icon" width="20" height="20">
+                                <use href="./images/icons.svg#instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="link footer-social-link" href="">
+                            <svg class="icon" width="20" height="20">
+                                <use href="./images/icons.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="link footer-social-link" href="">
+                            <svg class="icon" width="20" height="20">
+                                <use href="./images/icons.svg#facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="link footer-social-link" href="">
+                            <svg class="icon" width="20" height="20">
+                                <use href="./images/icons.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
