--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,22 @@
                 </ul>
             </nav>
             <ul class="list contacts-list">
-                <li class="contacts-item"><a class="link header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="contacts-item"><a class="link header-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="contacts-item">
+                    <a class="link header-contact" href="mailto:info@devstudio.com">
+                        <svg class="icon  header-contact-icon" width="16" height="12">
+                            <use href="./images/icons.svg#envelope"></use>
+                        </svg>
+                        info@devstudio.com
+                    </a>
+                </li>
+                <li class="contacts-item">
+                    <a class="link header-contact" href="tel:+380961111111">
+                        <svg class="icon header-contact-icon" width="10" height="16">
+                            <use href="./images/icons.svg#smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11
+                    </a>
+                </li>
             </ul>
         </div>
     </header>
@@ -142,15 +156,52 @@
     </main>
 <!-- Подвал -->
     <footer class="footer">
-        <div class="container">
-            <a class="link logo footer-logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-            <address class="address footer-address">
-                <ul class="list">
-                    <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
-                    <li class="address-item"><a class="link footer-contact" href="mailto:info@example.com">info@example.com</a></li>
-                    <li class="address-item"><a class="link footer-contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <div class="container footer-container">
+            <div>
+                <a class="link logo footer-logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+                <address class="address footer-address">
+                    <ul class="list">
+                        <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
+                        <li class="address-item"><a class="link footer-contact"
+                                href="mailto:info@example.com">info@example.com</a></li>
+                        <li class="address-item"><a class="link footer-contact" href="tel:+380991111111">+38 099 111 11
+                                11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-social-box">
+                <h2 class="social-title">присоединяйтесь</h2>
+                <ul class="list footer-social-links">
+                    <li class="footer-social-item">
+                        <a class="link footer-social-link" href="">
+                            <svg class="icon" width="20" height="20">
+                                <use href="./images/icons.svg#instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="link footer-social-link" href="">
+                            <svg class="icon" width="20" height="20">
+                                <use href="./images/icons.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="link footer-social-link" href="">
+                            <svg class="icon" width="20" height="20">
+                                <use href="./images/icons.svg#facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="link footer-social-link" href="">
+                            <svg class="icon" width="20" height="20">
+                                <use href="./images/icons.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
